--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MY RESUME</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="css/lightbox.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Forum&amp;family=Nunito&amp;family=Playfair+Display:ital@0;1&amp;family=Urbanist:wght@200&amp;display=swap"
-
+    <link href="https://fonts.googleapis.com/css2?family=Forum&amp;family=Nunito&amp;family=Playfair+Display:ital@0;1&amp;family=Urbanist:wght@200&amp;display=swap"
       rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -23,31 +20,24 @@
       <div class="row   ">
         <nav class=" my-nav navbar navbar-expand-lg  ">
           <div class=" my-nav container-fluid"> <a class=" navbar-brand" href="#">S/C</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
               aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon  "></span>
             </button>
-            <div class="collapse navbar-collapse   " style="text-align: center;"
-
+            <div class="collapse navbar-collapse   " style="text-align: center;"
               id="navbarSupportedContent">
               <ul class="navbar-nav  me-auto mb-2 mb-lg-0">
-                <li class="nav-item"> <a class="nav-link" href="#scrollspyHeading1"
-
+                <li class="nav-item"> <a class="nav-link" href="#scrollspyHeading1"
                     style="color: black;">ABOUT ME</a> </li>
-                <li class="nav-item"> <span style="color: black;"><a class="nav-link"
-
+                <li class="nav-item"> <span style="color: black;"><a class="nav-link"
                       href="#scrollspyHeading2" style="color: black;">MY SKILL</a>
                   </span></li>
                 <span style="color: black;"> </span>
-                <li class="nav-item"><span style="color: black;"> <a class="nav-link"
-
+                <li class="nav-item"><span style="color: black;"> <a class="nav-link"
                       href="#scrollspyHeading3" style="color: black;">MY
                       EXPERIENCE</a></span> </li>
               </ul>
-              <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
-
+              <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
                 data-bs-smooth-scroll="true" class="scrollspy-example  " tabindex="0">
               </div>
             </div>
@@ -59,21 +49,25 @@
       <h4 id="scrollspyHeading1">
         <div class="text-align: center;"> <br>
           <br>
-          <div style="text-align: center;"><img src="images/%CA%9A%20luvnz4a%20%C9%9E.jpg"
-
+          <div style="text-align: center;"><img src="images/%CA%9A%20luvnz4a%20%C9%9E.jpg"
               style="width: 133px; height: 133px;" class=" rounded-circle border border-black"></div>
           <div class="my-mb1" style="text-align: center;"><br>
+            <h4 id="scrollspyHeading1"></h4>
+            <h3></h3>
             <h1>SAMUCHAYA CHAWAWIGRAN</h1>
             <h3> Content Creator</h3>
+            <h4 id="scrollspyHeading1">
+            </h4>
+            <p>640510648</p>
+            <p>
+            </p>
+            <h3> </h3>
             <br>
-            <a href="https://www.facebook.com/" title=" " target="_blank"> <img
-
+            <a href="https://www.facebook.com/" title=" " target="_blank"> <img
                 src="images/facebook.png" style="width: 35px; height: 35px;"></a>
-            <a href="https://www.instagram.com/" title=" " target="_blank"><img
-
+            <a href="https://www.instagram.com/" title=" " target="_blank"><img
                 src="images/instagram.png" style="width: 35px; height: 35px;"></a>
-            <a href="https://www.gmail.com/" title=" " target="_blank"><img src="images/mail.png"
-
+            <a href="https://www.gmail.com/" title=" " target="_blank"><img src="images/mail.png"
                 style="width: 42px; height: 42px;"> </a></div>
         </div>
       </h4>
@@ -91,8 +85,7 @@
           <h4 style="text-align: left;"><b>EDUCATION</b></h4>
           <div class="row  ">
             <div class="col-md-3  "><br>
-              <div style="text-align: left;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img
-
+              <div style="text-align: left;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img
                   src="images/mortarboard.png" alt="" style="width: 67px; height: 67px;"></div>
             </div>
             <div class="col-md-7 my-linel my-bg"><br>
@@ -106,8 +99,7 @@
             <div class="col-md-3   " style="text-align: center;">
               <dl>
               </dl>
-              <div style="text-align: left;">&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/document.png"
-
+              <div style="text-align: left;">&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/document.png"
                   style="width: 67px; height: 67px;"></div>
               <dl>
               </dl>
@@ -129,18 +121,13 @@
         <div class="col-md-6 grid gap-3 ">
           <h4 style="text-align: center;"> <b>SOFTWARE SKILLS</b></h4>
           <br>
-          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/html-7.png"
-
-              style="width: 70px; height: 90px;">&nbsp; <img src="images/java-script-js-logo-ACF4AE5082-seeklogo.com.png"
-
-              style="width: 70px; height: 90px;">&nbsp; <img src="images/css3_logo_and_wordmark.svg.png"
-
+          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/html-7.png"
+              style="width: 70px; height: 90px;">&nbsp; <img src="images/java-script-js-logo-ACF4AE5082-seeklogo.com.png"
+              style="width: 70px; height: 90px;">&nbsp; <img src="images/css3_logo_and_wordmark.svg.png"
               alt="" style="width: 70px; height: 90px;"></div>
           <br>
-          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/photoshop.png"
-
-              alt="" style="width: 70px; height: 70px;">&nbsp; <img src="images/adobe_Photoshop_Lightroom_CC_logo.svg.png"
-
+          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/photoshop.png"
+              alt="" style="width: 70px; height: 70px;">&nbsp; <img src="images/adobe_Photoshop_Lightroom_CC_logo.svg.png"
               alt="" style="width: 70px; height: 70px;"> </div>
           <div class="p-2 g-col-6"> &nbsp;</div>
           <div class="p-2 g-col-6"></div>
@@ -162,8 +149,7 @@
               </div>
             </div>
             <div class="col-md-6 grid gap-5" style="text-align: center;">
-              <div class="p-2 g-col-6"><img src="images/video-editor.png" alt=""
-
+              <div class="p-2 g-col-6"><img src="images/video-editor.png" alt=""
                   style="width: 77px; height: 77px;"> <br>
                 <p> Video editor</p>
                 <h4 id="scrollspyHeading3"></h4>
@@ -184,8 +170,7 @@
           <p> </p>
           <ul>
             <li>
-              <p>Admin of Instagram accounts<a href="https://www.instagram.com/getthrough_covid19"
-
+              <p>Admin of Instagram accounts<a href="https://www.instagram.com/getthrough_covid19"
                   title=" " target="_blank"> @getthrough_covid19</a></p>
             </li>
             <li>
@@ -199,22 +184,16 @@
               <div class="carousel-item active" style="text-align: center;"> <br>
                 <a id="skills"><img src="images/1.png" class="d-block w-75" alt="skills"></a>
               </div>
-              <div class="carousel-item"> <img src="images/4.png" class="d-block w-75"
-
+              <div class="carousel-item"> <img src="images/4.png" class="d-block w-75"
                   alt="skills2"> </div>
-              <div class="carousel-item"> <img src="images/2.jpg" class="d-block w-75"
-
+              <div class="carousel-item"> <img src="images/2.jpg" class="d-block w-75"
                   alt="skills3"> </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
               data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span> </button> <button
-
-              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-
-              data-bs-slide="next" style="top: 0px; left: 380px;"> <span class="carousel-control-next-icon"
-
+              <span class="visually-hidden">Previous</span> </button> <button
+              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+              data-bs-slide="next" style="top: 0px; left: 380px;"> <span class="carousel-control-next-icon"
                 aria-hidden="true"></span> <span class="visually-hidden">Next</span>
             </button> </div>
         </div>
@@ -240,14 +219,10 @@
         </div>
       </div>
     </div>
-    <div class="row my-line2"> <img src="images/IMG_4946.1.JPG" class="img-fluid"
-
+    <div class="row my-line2"> <img src="images/IMG_4946.1.JPG" class="img-fluid"
         style=" height: 61px;"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
-    
   </body>
 </html>
