--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div class="row  fixed-top     ">
+    <div class="row  fixed-top my-bg     ">
       <div class="row   ">
         <nav class=" my-nav navbar navbar-expand-lg  ">
           <div class=" my-nav container-fluid"> <a class=" navbar-brand" href="#">S/C</a>
@@ -56,13 +56,7 @@
             <h3></h3>
             <h1>SAMUCHAYA CHAWAWIGRAN</h1>
             <h3> Content Creator</h3>
-            <h4 id="scrollspyHeading1">
-            </h4>
-            <p>640510648</p>
-            <p>
-            </p>
-            <h3> </h3>
-            <br>
+            <h4 id="scrollspyHeading1"> </h4>
             <a href="https://www.facebook.com/" title=" " target="_blank"> <img
                 src="images/facebook.png" style="width: 35px; height: 35px;"></a>
             <a href="https://www.instagram.com/" title=" " target="_blank"><img
