--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div class="row  fixed-top my-bg2     ">
+    <div class="row  fixed-top my-bg     ">
       <div class="row   ">
         <nav class=" my-nav navbar navbar-expand-lg  ">
           <div class=" my-nav container-fluid"> <a class=" navbar-brand" href="#">S/C</a>
@@ -45,7 +45,7 @@
         </nav>
       </div>
     </div>
-    <div class="row my-bg2 ">
+    <div class="row my-bg ">
       <h4 id="scrollspyHeading1">
         <div class="text-align: center;"> <br>
           <br>
