--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h4 id="scrollspyHeading1">
         <div class="text-align: center;"> <br>
           <br>
-          <div style="text-align: center;"><img src="images/%CA%9A%20luvnz4a%20%C9%9E.jpg"
+          <div style="text-align: center;"><img src="images/382245879_1363916921220903_5494237978878494887_n.jpg"
               style="width: 133px; height: 133px;" class=" rounded-circle border border-black"></div>
           <div class="my-mb1" style="text-align: center;"><br>
             <h4 id="scrollspyHeading1"></h4>
