--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Forum&amp;family=Nunito&amp;family=Playfair+Display:ital@0;1&amp;family=Urbanist:wght@200&amp;display=swap"
       rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Resume for Content Creator of Samuchaya Chawawigran">
+    <meta name="keywords" content="Resume,Samuchaya,Portfolio,Content Creator">
   </head>
   <body>
-    <div class="row  fixed-top my-bg     ">
-      <div class="row   ">
+    <div class="row  fixed-top my-bg ">
+      <div class="row col-md-12  ">
         <nav class=" my-nav navbar navbar-expand-lg  ">
           <div class=" my-nav container-fluid"> <a class=" navbar-brand" href="#">S/C</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -70,9 +72,10 @@
       <div class="row my-mb2">
         <h4><b>HI THERE!</b></h4>
         <br>
-        <p> Passionate content creator with multitasking skills for producing
-          content like digital media production. Adapt at coordinated with the
-          team to ensure alignment with project specifications.</p>
+        <p> This is resume of passionate content creator with multitasking
+          skills for producing content like digital media production. Adapt at
+          coordinated with the team to ensure alignment with project
+          specifications.</p>
       </div>
       <div class="col-md-12">
         <div class="row">
@@ -209,28 +212,54 @@
               <span class="visually-hidden">Next</span> </button> </div>
         </div>
       </div>
-      <div class="col-md-6"> </div>
       <div class="row my-mb1   ">
-        <h4> <b>Contact ME!</b></h4>
-        <br>
-        <div class="grid gap-5">
-          <div class="p-2 g-col-6"><br>
-            <p> <img src="images/placeholder.png" alt="" style="width: 35px; height: 35px;">&nbsp;&nbsp;
-              123 Anywhere Street, Any City</p>
+        <nav class="nav justify-content-center"> <br>
+          <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="images/placeholder.png" alt="" style="width: 35px; height: 35px;">
+          </button>
+          <div class="modal" tabindex="-1">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Address</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"
+                    aria-label="Close"></button> </div>
+                <div class="modal-body">
+                  <p>123 Anywhere Street, Any City.</p>
+                </div>
+                <div class="modal-footer"> <button type="button" class="btn btn-secondary"
+                    data-bs-dismiss="modal">Close</button></div>
+              </div>
+            </div>
           </div>
-          <div class="p-2 g-col-6">
-            <p><img src="images/phone-call.png" alt="" style="width: 35px; height: 35px;">&nbsp;&nbsp;
-              +123-456-7890</p>
+          <div> <button type="button" class="btn btn-light" data-bs-toggle="modal"
+              data-bs-target="#exampleModal"> <img src="images/phone-call.png"
+                alt="" style="width: 35px; height: 35px;"> </button>
+            <div class="modal" id="exampleModal" tabindex="-1">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">Phone Number</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                      aria-label="Close"></button> </div>
+                  <div class="modal-body">
+                    <p>012-345-6789</p>
+                  </div>
+                  <div class="modal-footer"> <button type="button" class="btn btn-secondary"
+                      data-bs-dismiss="modal">Close</button> </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <p> </p>
-          <div class="p-2 g-col-6">
-            <p><img src="images/mail.png" alt="" style="width: 35px; height: 35px;">&nbsp;&nbsp;
-              scmuchacc@gmail.com </p>
-          </div>
-        </div>
+          <a class="nav-link active" aria-current="page" href="https://www.facebook.com/"
+            target="_blank"><img src="images/facebook.png" style="width: 35px; height: 35px;"></a>
+          <a class="nav-link" href="https://www.instagram.com/" target="_blank"><img
+              src="images/instagram.png" style="width: 35px; height: 35px;"></a>
+          <a class="nav-link" href="https://www.gmail.com/" target="_blank"><img
+              src="images/email.png" style="width: 40px; height: 37px;"></a> </nav>
       </div>
     </div>
-    <div class="row my-line2 "> <img src="images/bg.jpg" class="img-fluid" style=" height: 61px;"></div>
+    <div class="row my-line2 "> <img src="images/bg.jpg" class="img-fluid" style=" height: 100px;"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
