--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MY RESUME</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+
       crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="css/lightbox.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Forum&amp;family=Nunito&amp;family=Playfair+Display:ital@0;1&amp;family=Urbanist:wght@200&amp;display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Forum&amp;family=Nunito&amp;family=Playfair+Display:ital@0;1&amp;family=Urbanist:wght@200&amp;display=swap"
+
       rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Resume for Content Creator of Samuchaya Chawawigran">
+    <meta name="description" content="Resume for Content Creator of Samuchaya Chawawigran:Portfolio">
     <meta name="keywords" content="Resume,Samuchaya,Portfolio,Content Creator">
   </head>
   <body>
@@ -22,24 +25,31 @@
       <div class="row col-md-12  ">
         <nav class=" my-nav navbar navbar-expand-lg  ">
           <div class=" my-nav container-fluid"> <a class=" navbar-brand" href="#">S/C</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+
               aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon  "></span>
             </button>
-            <div class="collapse navbar-collapse   " style="text-align: center;"
+            <div class="collapse navbar-collapse   " style="text-align: center;"
+
               id="navbarSupportedContent">
               <ul class="navbar-nav  me-auto mb-2 mb-lg-0">
-                <li class="nav-item"> <a class="nav-link" href="#scrollspyHeading1"
+                <li class="nav-item"> <a class="nav-link" href="#scrollspyHeading1"
+
                     style="color: black;">ABOUT ME</a> </li>
-                <li class="nav-item"> <span style="color: black;"><a class="nav-link"
+                <li class="nav-item"> <span style="color: black;"><a class="nav-link"
+
                       href="#scrollspyHeading2" style="color: black;">MY SKILL</a>
                   </span></li>
                 <span style="color: black;"> </span>
-                <li class="nav-item"><span style="color: black;"> <a class="nav-link"
+                <li class="nav-item"><span style="color: black;"> <a class="nav-link"
+
                       href="#scrollspyHeading3" style="color: black;">MY
                       EXPERIENCE</a></span> </li>
               </ul>
-              <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
+              <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
+
                 data-bs-smooth-scroll="true" class="scrollspy-example  " tabindex="0">
               </div>
             </div>
@@ -51,7 +61,8 @@
       <h4 id="scrollspyHeading1">
         <div class="text-align: center;"> <br>
           <br>
-          <div style="text-align: center;"><img src="images/382245879_1363916921220903_5494237978878494887_n.jpg"
+          <div style="text-align: center;"><img src="images/382245879_1363916921220903_5494237978878494887_n.jpg"
+
               style="width: 133px; height: 133px;" class=" rounded-circle border border-black"></div>
           <div class="my-mb1" style="text-align: center;"><br>
             <h4 id="scrollspyHeading1"></h4>
@@ -59,11 +70,14 @@
             <h1>SAMUCHAYA CHAWAWIGRAN</h1>
             <h3> Content Creator</h3>
             <h4 id="scrollspyHeading1"> </h4>
-            <a href="https://www.facebook.com/" title=" " target="_blank"> <img
+            <a href="https://www.facebook.com/" title=" " target="_blank"> <img
+
                 src="images/facebook.png" style="width: 35px; height: 35px;"></a>
-            <a href="https://www.instagram.com/" title=" " target="_blank"><img
+            <a href="https://www.instagram.com/" title=" " target="_blank"><img
+
                 src="images/instagram.png" style="width: 35px; height: 35px;"></a>
-            <a href="https://www.gmail.com/" title=" " target="_blank"><img src="images/mail.png"
+            <a href="https://www.gmail.com/" title=" " target="_blank"><img src="images/mail.png"
+
                 style="width: 42px; height: 42px;"> </a></div>
         </div>
       </h4>
@@ -84,7 +98,8 @@
             <br>
             <div class="row">
               <div class="row">
-                <div class="col-md-4" style="text-align: center;"><img src="images/mortarboard.png"
+                <div class="col-md-4" style="text-align: center;"><img src="images/mortarboard.png"
+
                     alt="" style="width: 67px; height: 67px;">&nbsp;</div>
                 <div class="col-md-8 my-linel my-bg2">
                   <p> <b>2021-2024</b></p>
@@ -96,7 +111,8 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-4" style="text-align: center;"><img src="images/document.png"
+                <div class="col-md-4" style="text-align: center;"><img src="images/document.png"
+
                     alt="" style="width: 67px; height: 67px;"></div>
                 <div class="col-md-8  my-bg2  my-linel ">
                   <p><b>2014-2020</b></p>
@@ -112,7 +128,8 @@
             </p>
             <div class="row">
               <div class="col-md-6">
-                <div style="text-align: center;"><img src="images/united-kingdom.png"
+                <div style="text-align: center;"><img src="images/united-kingdom.png"
+
                     style="width: 80px; height: 80px;"></div>
                 <div style="text-align: center;"><br>
                 </div>
@@ -121,7 +138,8 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <div style="text-align: center;"><img src="images/thailand.png"
+                <div style="text-align: center;"><img src="images/thailand.png"
+
                     style="width: 80px; height: 80px;"></div>
                 <div style="text-align: center;"><br>
                 </div>
@@ -137,13 +155,18 @@
         <div class="col-md-6 grid gap-3 my-mb2 ">
           <h4 style="text-align: center;"> <b>SOFTWARE SKILLS</b></h4>
           <br>
-          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/html-7.png"
-              style="width: 78px; height: 100px;">&nbsp; <img src="images/java-script-js-logo-ACF4AE5082-seeklogo.com.png"
-              style="width: 78px; height: 100px;">&nbsp; <img src="images/css3_logo_and_wordmark.svg.png"
+          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/html-7.png"
+
+              style="width: 78px; height: 100px;">&nbsp; <img src="images/java-script-js-logo-ACF4AE5082-seeklogo.com.png"
+
+              style="width: 78px; height: 100px;">&nbsp; <img src="images/css3_logo_and_wordmark.svg.png"
+
               alt="" style="width: 78px; height: 100px;"></div>
           <br>
-          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/photoshop.png"
-              alt="" style="width: 84px; height: 84px;"> &nbsp; <img src="images/adobe_Photoshop_Lightroom_CC_logo.svg.png"
+          <div class="p-2 g-col-6" style="text-align: center;"> <img src="images/photoshop.png"
+
+              alt="" style="width: 84px; height: 84px;"> &nbsp; <img src="images/adobe_Photoshop_Lightroom_CC_logo.svg.png"
+
               alt="" style="width: 84px; height: 84px;"> </div>
         </div>
         <div class="col-md-6 my-mb2">
@@ -164,7 +187,8 @@
               </div>
             </div>
             <div class="col-md-6 grid gap-5" style="text-align: center;">
-              <div class="p-2 g-col-6"><img src="images/video-editor.png" alt=""
+              <div class="p-2 g-col-6"><img src="images/video-editor.png" alt=""
+
                   style="width: 83px; height: 83px;"> <br>
                 <p> Video editor</p>
                 <h4 id="scrollspyHeading3"></h4>
@@ -185,7 +209,8 @@
           <p> </p>
           <ul>
             <li>
-              <p>Admin of Instagram accounts<a href="https://www.instagram.com/getthrough_covid19"
+              <p>Admin of Instagram accounts<a href="https://www.instagram.com/getthrough_covid19"
+
                   title=" " target="_blank"> @getthrough_covid19</a></p>
             </li>
             <li>
@@ -196,72 +221,92 @@
         <div class="col-md-6  ">
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-              <div class="carousel-item active" style="text-align: center;"> <a
+              <div class="carousel-item active" style="text-align: center;"> <a
+
                   id="skills"><img src="images/1.png" class="d-block w-75" alt="skills"></a>
               </div>
-              <div class="carousel-item"> <img src="images/4.png" class="d-block w-75"
+              <div class="carousel-item"> <img src="images/4.png" class="d-block w-75"
+
                   alt="skills2"> </div>
-              <div class="carousel-item"> <img src="images/2.jpg" class="d-block w-75"
+              <div class="carousel-item"> <img src="images/2.jpg" class="d-block w-75"
+
                   alt="skills3"> </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+
               data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span> </button> <button
-              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+              <span class="visually-hidden">Previous</span> </button> <button
+
+              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+
               data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span> </button> </div>
         </div>
       </div>
       <div class="row my-mb1   ">
         <nav class="nav justify-content-center"> <br>
-          <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img src="images/placeholder.png" alt="" style="width: 35px; height: 35px;">
-          </button>
-          <div class="modal" tabindex="-1">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">Address</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal"
-                    aria-label="Close"></button> </div>
-                <div class="modal-body">
-                  <p>123 Anywhere Street, Any City.</p>
-                </div>
-                <div class="modal-footer"> <button type="button" class="btn btn-secondary"
-                    data-bs-dismiss="modal">Close</button></div>
-              </div>
-            </div>
-          </div>
-          <div> <button type="button" class="btn btn-light" data-bs-toggle="modal"
-              data-bs-target="#exampleModal"> <img src="images/phone-call.png"
+          <div> <button type="button" class="btn btn-light" data-bs-toggle="modal"
+
+              data-bs-target="#exampleModal"> <img src="images/placeholder.png"
+
                 alt="" style="width: 35px; height: 35px;"> </button>
             <div class="modal" id="exampleModal" tabindex="-1">
-              <div class="modal-dialog">
+              <div class="modal-dialog  modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title">Phone Number</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                    <h5 class="modal-title">Address</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+
                       aria-label="Close"></button> </div>
                   <div class="modal-body">
-                    <p>012-345-6789</p>
+                    <p>123 Anywhere Street, Any City</p>
                   </div>
-                  <div class="modal-footer"> <button type="button" class="btn btn-secondary"
+                  <div class="modal-footer"> <button type="button" class="btn btn-secondary"
+
                       data-bs-dismiss="modal">Close</button> </div>
                 </div>
               </div>
             </div>
           </div>
-          <a class="nav-link active" aria-current="page" href="https://www.facebook.com/"
+          <div> <button type="button" class="btn btn-light" data-bs-toggle="modal"
+
+              data-bs-target="#exampleModal2"> <img src="images/phone-call.png"
+
+                alt="" style="width: 35px; height: 35px;"> </button>
+            <div class="modal" id="exampleModal2" tabindex="-1">
+              <div class="modal-dialog  modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">Phone Number</h5>
+                    <button type="button" class="btn-close " data-bs-dismiss="modal"
+
+                      aria-label="Close"></button> </div>
+                  <div class="modal-body">
+                    <p>012-345-6789</p>
+                  </div>
+                  <div class="modal-footer"> <button type="button" class="btn btn-secondary"
+
+                      data-bs-dismiss="modal">Close</button> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a class="nav-link active" aria-current="page" href="https://www.facebook.com/"
+
             target="_blank"><img src="images/facebook.png" style="width: 35px; height: 35px;"></a>
-          <a class="nav-link" href="https://www.instagram.com/" target="_blank"><img
+          <a class="nav-link" href="https://www.instagram.com/" target="_blank"><img
+
               src="images/instagram.png" style="width: 35px; height: 35px;"></a>
-          <a class="nav-link" href="https://www.gmail.com/" target="_blank"><img
+          <a class="nav-link" href="https://www.gmail.com/" target="_blank"><img
+
               src="images/email.png" style="width: 40px; height: 37px;"></a> </nav>
       </div>
     </div>
     <div class="row my-line2 "> <img src="images/bg.jpg" class="img-fluid" style=" height: 100px;"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+
 crossorigin="anonymous"></script>
   </body>
 </html>
